discussion/jgit/163402/163402_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Fix InvalidInlineTag error flagged by error prone

Running recent error prone version complaining on that code:

RefDatabase.java:444: error: [InvalidInlineTag] Tag name `linkObjectId`
is unknown.
	 * Includes peeled {@linkObjectId}s. This is the inverse lookup of
	                   ^
    (see https://errorprone.info/bugpattern/InvalidInlineTag)

Bug: 562756
Change-Id: If91da51d5138fb753c0550eeeb9e3883a394123d
Signed-off-by: David Ostrovsky <david@ostrovsky.org>

======================================================================================================================
COMMENTS
======================================================================================================================
Author: David Pursehouse
Date: 2020-06-02 02:51:37.000000000
Message: 
Patch Set 3: Patch Set 2 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-02 02:51:46.000000000
Message: 
Patch Set 3:

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3255/
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-02 03:52:42.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3255/ : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-02 06:30:47.000000000
Message: 
Patch Set 3: -Verified

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3258/
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2020-06-02 06:44:52.000000000
Message: 
Patch Set 3: Verified+1

Build Successful 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline/3258/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Matthias Sohn
Date: 2020-06-02 06:52:37.000000000
Message: 
Change has been successfully merged by Matthias Sohn
----------------------------------------------------------------------------------------------------------------------
